added node-polyfill-webpack-plugin successfully

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "^3.19.0",
     "font-awesome": "^4.7.0",
     "googleapis": "^108.0.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "vue": "^3.2.23",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
