--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@coreui/utils": "^1.3.1",
     "@coreui/vue": "^4.1.0",
     "@coreui/vue-chartjs": "2.0.0",
+    "axios": "^1.1.3",
     "core-js": "^3.19.0",
     "font-awesome": "^4.7.0",
     "googleapis": "^108.0.0",
