--- a/package.json
+++ b/package.json
@@ -29,11 +29,16 @@
     "@coreui/utils": "^1.3.1",
     "@coreui/vue": "^4.1.0",
     "@coreui/vue-chartjs": "2.0.0",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
+    "axios": "^1.2.2",
+    "axios-extensions": "^3.1.6",
     "core-js": "^3.19.0",
     "font-awesome": "^4.7.0",
     "googleapis": "^108.0.0",
     "vue": "^3.2.23",
     "vue-google-sheets-oauth2": "^1.0.11",
+    "vue-notifications": "^1.0.2",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
